--- a/hourglass_site/templates/import_xls_step_2.html
+++ b/hourglass_site/templates/import_xls_step_2.html
@@ -10,7 +10,7 @@
     <div class="six-columns">
 <h2>IT Schedule 70 Data Capture</h2>
 
-<h3>Step 2: Valdiate Proposed Price List</h3>
+<h3>Step 2: Validate Proposed Price List</h3>
 
 <p>
   Thanks for uploading your price list! Below is the data gleaned from the
