--- a/hourglass_site/static/hourglass_site/style/main.css
+++ b/hourglass_site/static/hourglass_site/style/main.css
@@ -372,3 +372,8 @@ ul.errorlist li {
 form > table > tbody {
   vertical-align: bottom;
 }
+
+.file-name {
+  font-family: monospace;
+  margin-left: 10px;
+}
