Add HIDE_DEBUG_UI setting.

--- a/data_capture/templates/data_capture/step_1.html
+++ b/data_capture/templates/data_capture/step_1.html
@@ -9,7 +9,7 @@
 {% block step_body %}
 {% include 'data_capture/step_1_form.html' %}
 
-{% if DEBUG %}
+{% if show_debug_ui %}
 {% load static %}
 <p style="color: gray">
   <strong>Developers:</strong>
