--- a/data_capture/templates/data_capture/step.html
+++ b/data_capture/templates/data_capture/step.html
@@ -30,6 +30,22 @@
   display: block;
   color: darkgray;
 }
+
+h1 {
+  margin-top: 0.5em;
+}
+
+.alert {
+  margin-bottom: 2em;
+}
+
+.step-body {
+  margin-bottom: 1.5em;
+}
+
+a.button.button-primary {
+  color: white;
+}
 </style>
 {% endblock %}
 
@@ -61,7 +77,9 @@
 
 {% include 'data_capture/messages.html' %}
 
+<div class="step-body">
 {% block step_body %}{% endblock %}
+</div>
 
 </div>
 
