--- a/hourglass_site/static_source/style/components/_header.scss
+++ b/hourglass_site/static_source/style/components/_header.scss
@@ -97,10 +97,12 @@ nav ul {
   li {
     list-style: none;
     float: left;
-    margin: 0;
-    :first-child {
-      margin-left: -1.5rem;
+    margin: 0 0.5em 0 0;
+
+    &:last-child {
+      margin-right: 0;
     }
+
     a {
       background: none repeat scroll 0 0 rgba(255, 255, 255, 0.15);
       border-radius: 4px;
